# rusty-ai

./: .gitignore  Cargo.toml  LICENSE  README.md
datasets/: abalone_cleaned.csv  abalone_cleaned_no_F.csv  cancer_clean.csv
src/: dataset.rs  lib.rs  linear.rs  logistic.rs
src/bayes/: categorical.rs  gaussian.rs  mod.rs  naive_bayes.rs
src/data/: dataset.rs
src/forests/: classifier.rs  mod.rs  params.rs  regressor.rs
src/metrics/: confusion.rs  errors.rs  mod.rs
src/regression/: linear.rs  logistic.rs  mod.rs
src/trees/: base.rs  classifier.rs  decision_tree.rs  mod.rs  node.rs  params.rs  regressor.rs
src/unsupervised/: kmeans.rs
