[package]
name = "rusty-ai"
description = "Rust Library for Machine Learning"
authors = ["Jan Budziński <jan.budzinski.stud@pw.edu.pl>"]
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"


exclude = [
    ".gitignore"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
csv = "1.3.0"
rand = "0.8.5"
rayon = "1.8.0"
nalgebra = "0.32.3"
num-traits = "0.2.17"


[[bin]]
name = "test-algos"
path = "src/bin/testing.rs"
